[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fht_cpu"
version = "1.0.0"
description = "Fast Hadamard Transform with SIMD acceleration"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/yourorg/fht"

[tool.scikit-build]
cmake.source-dir = "python"
build-dir = "build/{wheel_tag}"
minimum-version = "0.9"
wheel.packages = ["python/fht_cpu"]

[tool.cibuildwheel]
# Build for CPython 3.10-3.14
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# Skip 32-bit and musl
skip = "*-win32 *-manylinux_i686 *-musllinux*"
# Test each wheel after building
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests/ -v"

[tool.cibuildwheel.linux]
# OpenMP is available by default in manylinux

[tool.cibuildwheel.macos]
before-build = "brew install libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }
# 1. delocate but do NOT bundle libomp (would cause duplicate-init crashes)
# 2. Rewrite the hardcoded Homebrew path to @rpath/libomp.dylib so the
#    extension picks up whichever libomp the runtime provides (conda, brew)
# 3. __init__.py pre-loads the correct libomp via ctypes before _core imports
repair-wheel-command = """\
delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v --exclude libomp.dylib {wheel} \
&& cd {dest_dir} \
&& for whl in *.whl; do \
    unzip -o -d _tmpwhl "$whl" \
    && for so in $(find _tmpwhl -name '*.so'); do \
        old=$(otool -L "$so" | grep -o '[^ ]*libomp[^ ]*' | head -1); \
        if [ -n "$old" ]; then \
            install_name_tool -change "$old" "@rpath/libomp.dylib" "$so"; \
        fi; \
    done \
    && rm "$whl" \
    && (cd _tmpwhl && zip -r "../$whl" .) \
    && rm -rf _tmpwhl; \
done\
"""
