[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fht_cpu"
version = "1.0.0"
description = "Fast Hadamard Transform with SIMD acceleration"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/yourorg/fht"

[tool.scikit-build]
cmake.source-dir = "python"
build-dir = "build/{wheel_tag}"
minimum-version = "0.9"
wheel.packages = ["python/fht_cpu"]

[tool.cibuildwheel]
# Build for CPython 3.10-3.14
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# Skip 32-bit and musl
skip = "*-win32 *-manylinux_i686 *-musllinux*"
# Test each wheel after building
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests/ -v"

[tool.cibuildwheel.linux]
# OpenMP is available by default in manylinux

[tool.cibuildwheel.macos]
before-build = "brew install libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }
repair-wheel-command = "bash {project}/build_tools/repair_macos_wheel.sh {wheel} {dest_dir} {delocate_archs}"

